--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
